--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,14 @@ export(right_xl)
 export(scrapeR)
 export(tableR)
 export(xpathTextR)
-import(dplyr)
-import(magrittr)
-import(rvest)
-import(xml2)
+importFrom(dplyr,filter)
+importFrom(dplyr,tibble)
 importFrom(magrittr,"%>%")
+importFrom(purrr,pluck)
+importFrom(rvest,html_attr)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_table)
+importFrom(rvest,html_text)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_locate)
+importFrom(xml2,read_html)
