--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ export(nhs_data_elements)
 export(right_xl)
 export(scrapeR)
 export(tableR)
+export(tableRtoNamedList)
 export(xpathTextR)
 importFrom(dplyr,filter)
 importFrom(dplyr,tibble)
 importFrom(magrittr,"%>%")
 importFrom(purrr,pluck)
+importFrom(purrr,set_names)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
