--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Collate:
     'linkScrapeR.R'
     'mid_xl.R'
     'nhs_data_elements.R'
+    'openSafelyCodeList.R'
     'right_xl.R'
     'tableRtoNamedList.R'
     'xpathTextR.R'
