--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(len_xl)
 export(linkScrapeR)
 export(mid_xl)
 export(nhs_data_elements)
+export(openSafelyCodeList)
 export(right_xl)
 export(scrapeR)
 export(tableR)
