Rebased back to original version
Development version has been downloaded, as there are a number of changes needed to make this work.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,7 @@ Package: NHSDataDictionaRy
 Type: Package
 Title: NHS Data Dictionary Toolset for NHS Lookups
 Version: 1.2.1
-Authors@R: c(
-            person("Gary", "Hutson", email = "g.hutson@nhs.net", role = c("aut", "cre")), 
-            person("Calum", "Polwart", email = "calum.polwart", role = "ctb" ))
+Author: Gary Hutson
 Maintainer: Gary Hutson <g.hutson@nhs.net>
 Description: Providing a common set of simplified web scraping tools for working with the NHS Data Dictionary <https://datadictionary.nhs.uk/data_elements_overview.html>.
     The intended usage is to access the data elements section of the NHS Data Dictionary to access key lookups.
@@ -23,17 +21,14 @@ Imports:
     purrr, 
     tibble
 Collate: 
-    'scrapeR.R'
-    'tableR.R'
-    'NHStableR.R'
     'left_xl.R'
     'len_xl.R'
     'linkScrapeR.R'
     'mid_xl.R'
     'nhs_data_elements.R'
-    'openSafelyCodeList.R'
     'right_xl.R'
-    'tableRtoNamedList.R'
+    'scrapeR.R'
+    'tableR.R'
     'xpathTextR.R'
 Suggests: 
     knitr,
