--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: NHSDataDictionaRy
 Type: Package
 Title: NHS Data Dictionary Toolset for NHS Lookups
-Version: 1.2.1
-Author: Gary Hutson
+Version: 1.2.2
+Authors@R: c(
+          person("Gary", "Hutson", , "g.hutson@nhs.net", c("aut", "cre")),
+          person("Calum", "Polwart", , "calum.polwart@nhs.net", "aut")
+          )
 Maintainer: Gary Hutson <g.hutson@nhs.net>
 Description: Providing a common set of simplified web scraping tools for working with the NHS Data Dictionary <https://datadictionary.nhs.uk/data_elements_overview.html>.
     The intended usage is to access the data elements section of the NHS Data Dictionary to access key lookups.
     The benefits of having it in this package are that the lookups are the live lookups on the website and will not need to be maintained.
     This package was commissioned by the NHS-R community to provide this consistency of lookups.
+    The OpenSafely lookups have now been added <https://codelists.opensafely.org/>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -29,6 +33,7 @@ Collate:
     'right_xl.R'
     'scrapeR.R'
     'tableR.R'
+    'openSafely_listR.R'
     'xpathTextR.R'
 Suggests: 
     knitr,
