--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,5 +3,11 @@
 ^LICENSE\.md$
 ^\.github$
 ^CRAN-RELEASE$
-^cran-comments\.md$
+^README.*\.md$
+inst/examples/knitr-.*.pdf
+inst/examples/child/knitr-.*.pdf
+inst/examples/child/knitr-.*\.md
+inst/examples/figure
+inst/examples/cache
 ^\.travis\.yml$
+cran-comments.md
