--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Type: Package
 Title: NHS Data Dictionary Toolset for NHS Lookups
 Version: 1.2.4
 Authors@R: c(
-          person("Gary", "Hutson", , "g.hutson@nhs.net", c("aut", "cre"), comment = c(ORCID="0000-0003-3534-6143")),
+          person("Gary", "Hutson", , "hutsons-hacks@outlook.com", c("aut", "cre"), comment = c(ORCID="0000-0003-3534-6143")),
           person("Calum", "Polwart", , "calum.polwart@nhs.net", "aut"),
           person("Tom", "Jemmett", ,"thomas.jemmett@nhs.net", "aut", comment = c(ORCID="0000-0002-6943-2990"))
           )
-Maintainer: Gary Hutson <g.hutson@nhs.net>
+Maintainer: Gary Hutson <hutsons-hacks@outlook.com>
 Description: Providing a common set of simplified web scraping tools for working with the NHS Data Dictionary <https://datadictionary.nhs.uk/data_elements_overview.html>.
     The intended usage is to access the data elements section of the NHS Data Dictionary to access key lookups.
     The benefits of having it in this package are that the lookups are the live lookups on the website and will not need to be maintained.
